# mechanics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mechanics.sln  x88rv2.sln
Injector/: CMakeLists.txt  Console.h  Defines.h  Global.cpp  Injector.cpp  Injector.h  Injector.vcxproj  Injector.vcxproj.filters  Library.cpp  Library.h  Main.cpp
Injector/src/: CMakeLists.txt  Global.h  Injector.h
Loader/: Loader.csproj  NetConnection.cs  NetPacket.cs  Program.cs
Loader/Forms/: Login.Designer.cs  Login.cs  Main.Designer.cs  Main.cs
Loader/Properties/: AssemblyInfo.cs  Resources.Designer.cs
XorStrings/: CMakeLists.txt  Main.cpp  XorStrings.vcxproj  XorStrings.vcxproj.filters  plain.txt  xor.txt  xor_byte.txt
XorStrings/src/: CMakeLists.txt  Main.cpp
mechanics/: Antiaim.cpp  Antiaim.h  Application.cpp  Application.h  Autowall.cpp  Autowall.h  Bhop.cpp  Bhop.h  Button.cpp  Button.h  CInput.h  CMakeLists.txt  CUtlVector.h  CWeapon.cpp  CWeapon.h  Canvas.cpp  Chams.cpp  Chams.h  Checkbox.cpp  Checkbox.h  ClassDiagram.cd  ClientClass.cpp  ClientClass.h  ClientEntity.cpp  ClientEntity.h  ColorPicker.cpp  ColorPicker.h  ColorPickerPopup.cpp  ConVar.h  Config.cpp  Config.h  ConfigHelper.cpp  ConfigHelper.h  Console.cpp  Console.h  Controls.cd  Controls.h  CreateMove.cpp  CreateMove.h  DrawModelExecute.cpp  (+134 more)
mechanics/src/: AntiAim.cpp  AntiAim.h  Application.cpp  Application.h  Autowall.cpp  Benchmark.cpp  Benchmark.h  Bhop.cpp  Bhop.h  Button.cpp  Button.h  CGameTrace.h  CInput.h  CMakeLists.txt  CUtlVector.h  CWeapon.cpp  CWeapon.h  Canvas.cpp  Canvas.h  Chams.cpp  Chams.h  Checkbox.cpp  Checkbox.h  ClientClass.cpp  ClientClass.h  ClientEntity.cpp  ClientEntity.h  ColorPicker.cpp  ColorPicker.h  ColorPickerPopup.cpp  ColorPickerPopup.h  Config.cpp  Config.h  ConfigHelper.cpp  Console.cpp  Controls.h  CreateMove.cpp  CreateMove.h  Dependency.cpp  Dependency.h  (+140 more)
mechanics/src/core/: EspPlayer.cpp  GameEventListener.cpp  GameEventListener.h  LagCompensationPlayerEntry.h  LagCompensationPlayerList.cpp  LagCompensationPlayerList.h  NetVar.h  NetVarManager.cpp  NetVarManager.h  Offsets.cpp  Offsets.h  Player.cpp  Player.h  PlayerList.cpp  PlayerList.h  ResolverPlayer.h  ResourceManager.cpp  ResourceManager.h  SkinMetadata.h  SoundInfo.cpp  SoundInfo.h  Target.h
mechanics/src/features/: AntiAim.cpp  AntiAim.h  Autowall.cpp  Autowall.h  Bhop.cpp  Bhop.h  Chams.cpp  Chams.h  Esp.cpp  Esp.h  Fakeduck.cpp  Fakeduck.h  Fakelag.cpp  Fakelag.h  Fakewalk.cpp  Fakewalk.h  GunAccuracy.cpp  GunAccuracy.h  GunHud.cpp  GunHud.h  IFeature.cpp  LagCompensation.cpp  LagCompensation.h  Legitbot.cpp  Legitbot.h  MaterialVisuals.cpp  MaterialVisuals.h  Mirror.cpp  Mirror.h  Misc.cpp  Misc.h  Radar.cpp  Radar.h  Ragebot.cpp  Ragebot.h  Resolver.cpp  Resolver.h  SkinChanger.cpp  SkinChanger.h  SoundEsp.cpp  (+7 more)
mechanics/src/gui/: Canvas.h  Checkbox.h  ColorPickerPopup.cpp  Gui.cpp  Gui.h  IControl.cpp  IControl.h  IControlPopup.cpp  IControlPopup.h  IControlTooltip.cpp  IControlTooltip.h  InputHandler.h  KeyBinderPopup.cpp  Label.cpp  Label.h  Menu.cpp  Menu.h  NumericUpDown.cpp  NumericUpDown.h  SelectboxItem.cpp  SelectboxItem.h  SelectboxPopup.h  Slider.cpp  TabContainer.h  TabPage.cpp  TabPage.h  Textbox.cpp  Tooltip.h  Window.cpp
mechanics/src/hooks/: CreateMove.cpp  CreateMove.h  DrawModelExecute.cpp  DrawModelExecute.h  EmitSound.cpp  EmitSound.h  FindMdl.h  FireEventClientSide.cpp  FireEventClientSide.h  FrameStageNotify.cpp  FrameStageNotify.h  GetViewModelFov.cpp  LockCursor.cpp  OverrideView.cpp  OverrideView.h  PaintTraverse.cpp  PlaySound.cpp  PlaySound.h  RenderSmokeOverlay.cpp  RenderView.cpp  RenderView.h
mechanics/src/proxies/: EyeAnglesProxy.cpp  EyeAnglesProxy.h  LowerBodyYawProxy.cpp  LowerBodyYawProxy.h  SequenceProxy.cpp  SequenceProxy.h
mechanics/src/source_sdk/: CUtlVector.h  CViewSetup.h  CWeapon.cpp  CWeapon.h  ClientClass.h  ClientEntity.cpp  ClientEntity.h  ClientEntityList.h  ConVar.cpp  ConVar.h  ICVar.h  IClientMode.h  IEngineTrace.h  IMDLCache.h  IMatRenderContext.cpp  INetChannelInfo.h  IPhysicsSurfaceProps.h  ISurface.cpp  IVEngineClient.h  IViewRender.h  UserCmd.h  Vector.cpp  Vector.h
mechanics/src/utils/: Benchmark.cpp  Config.cpp  Config.h  ConfigHelper.cpp  Utils.cpp  Utils.h  VMTHook.h  WritableSection.h  XorString.cpp
x88rv2/: Aimbot.cpp  Aimbot.h  Antiaim.cpp  Antiaim.h  Application.cpp  Application.h  Autowall.h  BaseClientDLL.h  Bhop.cpp  Bhop.h  Button.cpp  Button.h  CGameTrace.h  CGlobalVars.h  CUtlVector.h  CViewSetup.h  CWeapon.cpp  CWeapon.h  Canvas.cpp  Chams.cpp  Chams.h  Checkbox.cpp  Checkbox.h  ClientClass.h  ClientEntity.cpp  ClientEntity.h  ClientFrameStage.h  ColorPicker.cpp  ColorPicker.h  ConVar.cpp  Console.cpp  Console.h  Controls.h  CreateInterface.cpp  CreateInterface.h  DllMain.cpp  ESP.cpp  ESP.h  Feature.cpp  Feature.h  (+93 more)
